# neighborhood

./: .gitignore  README.md
beamdask/: README.md  beam-dask.txt  pyproject.toml
beamdask/beamdask/: encode.py  ingest.py  sdk.py
beamdask/scrape/: staud-small.json  staud.json
chroma/: Dockerfile  README.md  boot.sh  client.py  demo.py  pyproject.toml
